Closed Bug 1634994 Opened 4 years ago Closed 4 years ago

"fatal error: 'aom/aom_decoder.h' file not found" with "ac_add_options --disable-av1" in .mozconfig

Categories

(Core :: Graphics: ImageLib, defect)

x86_64
All
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox-esr68 --- unaffected
firefox75 --- unaffected
firefox76 --- unaffected
firefox77 --- fixed
firefox78 --- fixed

People

(Reporter: MatsPalmgren_bugz, Assigned: froydnj)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

0:05.21 In file included from Unified_cpp_image_decoders0.cpp:11:
0:05.21 In file included from /md1/src/inbound/image/decoders/nsAVIFDecoder.cpp:9:
0:05.21 /md1/src/inbound/image/decoders/nsAVIFDecoder.h:14:10: fatal error: 'aom/aom_decoder.h' file not found
0:05.21 #include "aom/aom_decoder.h"
0:05.21 ^~~~~~~~~~~~~~~~~~~

(I've tried "./mach clobber" BTW - it didn't help.)

Flags: needinfo?(jbauman)

My .mozconfig has "ac_add_options --disable-av1", removing that fixed it.

Severity: S1 → S3
Summary: fatal error: 'aom/aom_decoder.h' file not found → "fatal error: 'aom/aom_decoder.h' file not found" with "ac_add_options --disable-av1" in .mozconfig

I reproduce this on Windows too.

OS: Linux → All

Some files are incorrectly built/included, as well as some code, when
--disable-av1 is passed. Let's fix that.

Assignee: nobody → nfroyd
Status: NEW → ASSIGNED

Do we want to continue supporting the --disable-av1 flag? It would simplify the code to remove it, and it's somewhat confusing that it applies to AVIF as well unless someone is well versed in the technical details of these features.

I'm not saying there's not a good use case to continue supporting it, I'm just not aware of what it is.

Flags: needinfo?(jbauman)
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78

Can this be uplifted to Beta?
IMHO, the --disable-av1 flag should ideally be removed together with libaom (bug 1635296).

(tt_1 from bug 1625363 comment #24)

ok, thanks for the info. Can't wait to see libaom being cleaned from the source code tree.

Mind you that the --disable-av1 switch now causes a compile error with firefox-77.0_beta3, as of writing this I couldn't find evidence if that's an official thing or introduced by a user patch.

Has Regression Range: --- → yes

(In reply to Jon Bauman [:jbauman:] from comment #4)

Do we want to continue supporting the --disable-av1 flag? It would simplify the code to remove it, and it's somewhat confusing that it applies to AVIF as well unless someone is well versed in the technical details of these features.

I'm not saying there's not a good use case to continue supporting it, I'm just not aware of what it is.

It would be really helpfull to keep it for at least as long as libaom is still a thing, since it's really a mess to handle if you need proper neon support.

The patch landed in nightly and beta is affected.
:froydnj, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(nfroyd)

Comment on attachment 9145602 [details]
Bug 1634994 - fix --disable-av1; r=tnikkel

Beta/Release Uplift Approval Request

  • User impact if declined: None, strictly a patch for people compiling Beta on their own. But it would be nice to accommodate them.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Not risky because it just disables some code for a --disable-foo configure option that we don't use.
  • String changes made/needed: None.
Flags: needinfo?(nfroyd)
Attachment #9145602 - Flags: approval-mozilla-beta?

Comment on attachment 9145602 [details]
Bug 1634994 - fix --disable-av1; r=tnikkel

Fixes build bustage for people building with --disable-av1 set (NPOTB for official builds). Approved for 77.0b5.

Attachment #9145602 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: